Changes in version 0.3.3
------------------------

* Updated Maven macro to default to Sonatype OSS repository.


Changes in version 0.3.2
------------------------

* Upgraded to Cobertura 1.9.4.1.

* Print mappings option for obfuscate macros

* Option to specify a default package for obfuscation.

* Configured Proguard to preserve Parcelable.Creator fields in Android apps.

* Configured Proguard to preserve custom Preference classes.

* Configured Proguard to preserve Fragment classes.

* Upgraded to Proguard 4.6.

* Added option to specify extra classpath entries for compile macro.

* Updated Android macros to use tools in platform-tools SDK directory.

* Added option to omit certain classes from coverage measurements when testing.

* Fixed dx execution on Windows.

* Macros for repackaging Android apps for the BlackBerry PlayBook.

* Upgraded to FOP 1.1.

* Upraded to Docbook stylesheets 1.78.


Changes in version 0.3.1
------------------------

* Added obfuscate macros using Proguard.

* Added bootclasspath option to test macro.

* Android macro improvements.


Changes in version 0.3.0
------------------------

* Experimental macros for building Android projects.

* Added bootclasspath option to compile macro.

* Upgraded to latest TestNG (5.13.1) and ReportNG (1.1.2).


Changes in version 0.2.7
------------------------

* Allow dist/lib directory to be over-ridden.

* Allow ReportNG XML dialect to be specified (defaults to 'testng').

* Allow test report directory to be over-ridden.


Changes in version 0.2.6
------------------------

* Provide a default value for the dist directory.

* When running tests, place the java/test-resources directory on the classpath.
  This is useful for loading test data from files.


Changes in version 0.2.5
------------------------

* The release target no longer fails if the API dir is missing.

* Compile and Javadoc tasks now specify the file encoding (default is UTF-8).


Changes in version 0.2.4
------------------------
